# alarm_clock

./: .gitignore  .gitmodules  README.md  build.sh  hw_notes.txt  todo.txt
clock_control/: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  build.sh  rp2040_task_plan.txt
clock_control/include/: FreeRTOSConfig.h  SD_flash.h  alarm_clock.h  chipcomms_i2c_host.h  chipcomms_spi_device.h  config.h  display.h  display_manager.h  flash.h  i2c0_setup.h  images.h  main.h  time_keeper.h  uart_flasher.h
clock_control/src/: .uart_flasher.c.swp  SD_flash.c  alarm_clock.c  chipcomms_i2c_host.c  chipcomms_spi_device.c  display.c  display_manager.c  flash.c  fs.c  i2c0_setup.c  main.c  time_keeper.c  uart_flasher.c
clock_wifi/: .gitignore  CMakeLists.txt  README.md  sdkconfig
clock_wifi/main/: CMakeLists.txt
clock_wifi/main/inc/: board_led.h  chipcomms_i2c_device.h  chipcomms_spi_host.h  flash.h  i2c_rp2040_command.h  main.h  wifi_secrets.h  wifi_setup.h
clock_wifi/main/src/: board_led.c  chipcomms_i2c_device.c  chipcomms_spi_host.c  flash.c  i2c_rp2040_command.c  main.c  wifi_setup.c
common/common_inc/: common_configs.h  common_i2c_configs.h  common_spi_configs.h  fs.h
common/common_src/: fs.c
flash_formatter/: .gitignore  2  fs_plan.txt  generate_flash_image.py  requirements.txt
flash_formatter/lib/: .file_table.py.swp  file_table.py  font.py
hw_architecture/: alarm_clk_blk.drawio  pin_connections.txt
